# rrlinter

./: .env.example  .gitignore  README.md  lint_resumes.command  main.py  make_resumes.py  pyproject.toml  resume_edit.py
rrlinter/: __init__.py  cli.py
